--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <title>Landing</title>
         <link rel="stylesheet" href="./style.css" />
     </head>
@@ -76,7 +77,7 @@
                 </div>
                 <div>
                         <div>
-                            <img src="./Images/pintado.jpg" class="pintado">
+                            <img src="./Images/pintado.jpg" class="pintado"/>
                             <div>
                                 <h4>Servicio de Pintado</h4>
                                 <p>Renueva tu carro con una capa de pintura al mejor confort</p>
