--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@
                 <p>8am  -  5pm</p>
 
                 <ul class="social-icons">
+
+                    <li>
+                        <a href="#" style="color: hsla(239, 91%, 44%, 0.582);"><i class="fab fa-facebook"></i></a>
+                    </li>
                     <li>
                         <a href="#" style="color: lawngreen;"><i class="fab fa-whatsapp"></i></a>
                     </li>
@@ -122,6 +126,9 @@
                     </li>
                     <li>
                         <a href="#" style="color: #6DD5FA;"><i class="fab fa-twitter"></i></a>
+                    </li>
+                    <li>
+                        <a href="#" style="color: #2e7994;"><i class="fab fa-telegram"></i></a>
                     </li>
                 </ul>
             </div>
