--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 </div>
                 <div>
                         <div>
-                            <img src="./Images/pintado.jpg" class="pintado"/>
+                            <img src="./Images/pintado.jpg" class="pintado" alt="pintado"/>
                             <div>
                                 <h4>Servicio de Pintado</h4>
                                 <p>Renueva tu carro con una capa de pintura al mejor confort</p>
@@ -87,7 +87,7 @@
                             </div>
                         </div> <!--.card-->
                 </div>
-    
+            </div>
             
         </div>
         <script src="./script.js"></script>
