--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="card card-yellow">
                     <img class="logo" src="./Images/logo.png" alt="logo"/>
                     <h2 class="title">Just <br> do <br> it</h2>
-                    <img class="product" src="./Images/mantenimiento.jpg" alt="mantenimiento" width="150" height="120"/>
+                    <img class="product" src="./Images/mantenimiento.avif" alt="mantenimiento" width="150" height="120"/>
                     <div class="price">
                         <h6>s/ 199.90</h6>
                         <h4>s/ 129.90</h4>
